examples/gateway-api/manifests/standard/http-request-mirroring/httproute-mirroring.yaml
#$ Used in:
#$ - site-src/guides/http-request-mirroring.md
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-filter-mirror
  labels:
    gateway: mirror-gateway
spec:
  parentRefs:
  - name: mirror-gateway
  hostnames:
  - mirror.example
  rules:
  - backendRefs:
    - name: foo-v1
      port: 8080
    filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          name: foo-v2
          port: 8080
---
# Following are resources not explicitely declared
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mirror-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: foo-v1
---
apiVersion: v1
kind: Service
metadata:
  name: foo-v2
